--- a/select2.css
+++ b/select2.css
@@ -28,14 +28,14 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 
 .select2-container .select2-choice {
     display: block;
-    height: 26px;
+    height: 36px;
     padding: 0 0 0 8px;
     overflow: hidden;
     position: relative;
 
     border: 1px solid #aaa;
     white-space: nowrap;
-    line-height: 26px;
+    line-height: 36px;
     color: #444;
     text-decoration: none;
 
@@ -79,7 +79,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-container .select2-choice > .select2-chosen {
-    margin-right: 26px;
+    margin-right: 36px;
     display: block;
     overflow: hidden;
 
@@ -172,12 +172,12 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-drop-active {
-    border: 1px solid #5897fb;
+    border: 1px solid #e22192;
     border-top: none;
 }
 
 .select2-drop.select2-drop-above.select2-drop-active {
-    border-top: 1px solid #5897fb;
+    border-top: 1px solid #e22192;
 }
 
 .select2-container .select2-choice .select2-arrow {
@@ -213,7 +213,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 .select2-search {
     display: inline-block;
     width: 100%;
-    min-height: 26px;
+    min-height: 36px;
     margin: 0;
     padding-left: 4px;
     padding-right: 4px;
@@ -227,7 +227,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 .select2-search input {
     width: 100%;
     height: auto !important;
-    min-height: 26px;
+    min-height: 36px;
     padding: 4px 20px 4px 5px;
     margin: 0;
 
@@ -266,7 +266,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
-    border: 1px solid #5897fb;
+    border: 1px solid #e22192;
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
@@ -293,7 +293,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 
 .select2-dropdown-open.select2-drop-above .select2-choice,
 .select2-dropdown-open.select2-drop-above .select2-choices {
-    border: 1px solid #5897fb;
+    border: 1px solid #e22192;
     border-top-color: transparent;
 
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(0.5, #eee));
@@ -364,7 +364,8 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-results .select2-highlighted {
-    background: #3875d7;
+    /*background: #3875d7;*/
+    background: #e22192;
     color: #fff;
 }
 
@@ -465,11 +466,11 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices {
-    min-height: 26px;
+    min-height: 36px;
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
-    border: 1px solid #5897fb;
+    border: 1px solid #e22192;
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
@@ -486,11 +487,11 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-field input {
-    padding: 5px;
+    padding: 8px;
     margin: 1px 0;
 
     font-family: sans-serif;
-    font-size: 100%;
+    font-size: 120%;
     color: #666;
     outline: 0;
     border: 0;
@@ -508,8 +509,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-choice {
-    padding: 3px 5px 3px 18px;
-    margin: 3px 0 3px 5px;
+    padding: 5px 5px 5px 18px;
+    margin: 7px 0 3px 7px;
     position: relative;
 
     line-height: 13px;
